testsuite/tests/typing-modules-bugs/pr7414_2_bad.compilers.reference
File "pr7414_2_bad.ml", line 46, characters 28-34:
46 |   let module Ignore = Force(Choose) in
                                 ^^^^^^
Error: Signature mismatch:
       Modules do not match:
         functor () -> sig module Choice : T val r : '_weak1 list ref ref end
       is not included in
         functor () -> S
       At position functor () -> <here>
       Modules do not match:
         sig module Choice : T val r : '_weak1 list ref ref end
       is not included in
         S
       At position functor () -> <here>
       Values do not match:
         val r : '_weak1 list ref ref
       is not included in
         val r : Choice.t list ref ref
       Type 'weak1 list ref ref do not match with Choice.t list ref ref
       The type constructor Choice.t would escape its scope
       File "pr7414_2_bad.ml", line 29, characters 2-31: Expected declaration
       File "pr7414_2_bad.ml", line 40, characters 8-9: Actual declaration
